<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="24dp"
    android:paddingRight="24dp"
    tools:context="co.com.app.homerepair.LoginActivity">

    <!-- Logo -->
    <ImageView
        android:id="@+id/image_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="50dp"
        android:paddingTop="50dp"
        android:scaleType="fitXY"
        android:src="@mipmap/ic_logo_mini"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:ignore="ContentDescription" />

    <!-- Acceso Label -->
    <TextView
        android:id="@+id/label_acceso"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:text="@string/text_acceso"
        android:textColor="@color/colorAccent"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/layout_input_usuario"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image_logo" />

    <!-- Usuario Input -->
    <android.support.design.widget.TextInputLayout
        android:id="@+id/layout_input_usuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/input_usuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_usuario"
            android:inputType="number" />
    </android.support.design.widget.TextInputLayout>

    <!-- Contraseña Input -->
    <android.support.design.widget.TextInputLayout
        android:id="@+id/layout_input_contrasegna"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_input_usuario">

        <EditText
            android:id="@+id/input_contrasegna"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_constrasegna"
            android:inputType="textPassword" />
    </android.support.design.widget.TextInputLayout>

    <!-- Ingresar Button -->
    <android.support.v7.widget.AppCompatButton
        android:id="@+id/button_ingresar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape"
        android:padding="12dp"
        android:text="@string/text_ingresar"
        android:textColor="@color/colorTextButton"
        android:textSize="15sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_input_contrasegna" />

    <!-- Registro Link -->
    <TextView
        android:id="@+id/link_registro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/link_registro"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_ingresar" />

</android.support.constraint.ConstraintLayout>
