<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"
    android:descendantFocusability="beforeDescendants"
    tools:context="co.com.app.homerepair.view.RegistroSolicitudActivity">

    <!-- Input de seleccion de categoria -->
    <android.support.design.widget.TextInputLayout
        android:id="@+id/layout_input_categoria"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/input_categoria"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_categoria_solicitud"
            android:inputType="text"
            android:maxLines="1"
            android:focusable="false"
            android:singleLine="true" />
    </android.support.design.widget.TextInputLayout>

    <!-- Input de descripcion de solicitud -->
    <android.support.design.widget.TextInputLayout
        android:id="@+id/layout_input_descripcion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_input_categoria">

        <EditText
            android:id="@+id/input_descripcion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_descripcion_solicitud"
            android:inputType="textMultiLine"
            android:maxLines="2" />
    </android.support.design.widget.TextInputLayout>

    <!-- Label de adicionar fotografias -->
    <TextView
        android:id="@+id/label_fotografias"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_fotografia"
        android:textSize="18sp"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintTop_toBottomOf="@id/layout_input_descripcion"
        android:layout_margin="@dimen/fab_margin"/>

    <!-- Frame del cargue de imagenes -->
    <FrameLayout
        android:id="@+id/fragment_carga_imagen"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="200dp"
        android:layout_marginBottom="10dp"
        android:layout_marginHorizontal="@dimen/fab_margin"
        android:layout_weight="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/label_fotografias"
        app:layout_constraintBottom_toTopOf="parent"/>

</android.support.constraint.ConstraintLayout>
